Change target to 1.8 to see if the travis CI passes