@@ -10,8 +10,8 @@
   <artifactId>agent-plugin-jvm-jdk9</artifactId>
 
   <properties>
-    <maven.compiler.source>1.9</maven.compiler.source>
-    <maven.compiler.target>1.9</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -59,58 +59,6 @@
                     <resource><directory>src9/main/resources</directory></resource>
                   </resources>
                 </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <encoding>UTF-8</encoding>
-              <compilerVersion>1.9</compilerVersion>
-              <source>1.9</source>
-              <target>1.9</target>
-              <compilerArgs>
-                <arg>--add-exports</arg>
-                <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-                <arg>--add-exports</arg>
-                <arg>java.base/jdk.internal.access=ALL-UNNAMED</arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-
-          <plugin>
-            <groupId>de.thetaphi</groupId>
-            <artifactId>forbiddenapis</artifactId>
-            <version>3.1</version>
-            <configuration>
-              <failOnUnresolvableSignatures>false</failOnUnresolvableSignatures>
-              <signaturesFiles>
-                <signaturesFile>${project.parent.basedir}/../dev/forbidden-apis-joda-time.txt</signaturesFile>
-                <signaturesFile>${project.parent.basedir}/../dev/forbidden-apis-bithon.txt</signaturesFile>
-              </signaturesFiles>
-              <excludes>
-                <exclude>**/SomeAvroDatum.class</exclude>
-              </excludes>
-              <suppressAnnotations>
-                <annotation>**.SuppressForbidden</annotation>
-              </suppressAnnotations>
-            </configuration>
-            <executions>
-              <execution>
-                <id>compile</id>
-                <phase>compile</phase>
-                <goals>
-                  <goal>check</goal>
-                </goals>
-                <!-- override the bundledSignature because openjdk9+ does not recognized it -->
-              </execution>
-              <execution>
-                <id>testCompile</id>
-                <phase>test-compile</phase>
-                <goals>
-                  <goal>testCheck</goal>
-                </goals>
               </execution>
             </executions>
           </plugin>
